--- a/FDPlatOnline/src/dbconfig.properties
+++ b/FDPlatOnline/src/dbconfig.properties
@@ -1,7 +1,7 @@
-url=jdbc\:mysql\://127.0.0.1\:3306/fudao?characterEncoding\=UTF-8
+url=jdbc\:mysql\://47.97.215.122\:3306/fudao?characterEncoding\=UTF-8
 driverClassName=com.mysql.jdbc.Driver
 username=root
-password=123456
+password=Fudao2017
 
 initialSize=1
 minIdle=1
